# MIFARE-EMISSION

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: config.json
include/mifare_emission/: access_engine.h  crypto.h  json_state.h  logger.h  master_key_vault.h  pcsc_reader.h  rfid_reader.h  time_policy.h  types.h
src/: access_engine.cpp  crypto.cpp  json_state.cpp  logger.cpp  main.cpp  master_key_vault.cpp  pcsc_reader.cpp  rfid_reader.cpp  time_policy.cpp  types.cpp
tests/: mock_rfid_reader.cpp  mock_rfid_reader.h  test_access_engine.cpp  test_crypto.cpp  test_json_state.cpp  test_master_key_vault.cpp  test_rfid_reader.cpp  test_time_policy.cpp  test_types.cpp
tools/: emission_tool.cpp
